# mead

./: Cargo.toml
gui/: Cargo.toml
gui/src/: api_client.rs  app.rs  lib.rs  main.rs  signals.rs  state.rs  utils.rs
gui/src/ui/: actions_panel.rs  mod.rs
mead_server/: Cargo.toml
mead_server/src/: main.rs
mead_server/src/responses/: mod.rs
schema/: Cargo.toml
schema/src/responses/: mod.rs
